add_library(cannon_game.game_layers
        STATIC
        src/main_layer.cpp
        src/gui_layer.cpp)
target_include_directories(cannon_game.game_layers
        PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/include
        )
target_link_libraries(cannon_game.game_layers
        PUBLIC
        sprite
        platform.ogl
        platform.glfw
        platform.stb_image
        cannon_game.game_objects
        imgui
        )
